--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Personal URL shortener
+title: Personal URL Shortener / Redirector
 description: ✂️🔗 This repo contains all the urls that i like to redirect.
 show_downloads: false
 timezone: Asia/Kolkata
